[project]
name = "ol"
version = "0.1.0"
description = "OpenLambda helper CLI"
readme = "README.md"
requires-python = ">=3.9"
[project.scripts]
ol = "ol.cli:main"
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["cli"]
namespaces = false
